Update java_internals.md